--- a/src/index.css
+++ b/src/index.css
@@ -12,10 +12,15 @@ body {
   background-color: #1c1733;
 }
 
+scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
 .scrollbar-hide {
   -ms-overflow-style: none; 
-  scrollbar-width: none; 
+  scrollbar-width: none;
 }
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
