--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@layer utilities {
+  /* Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -14,7 +25,7 @@ body {
 
   /* background:  linear-gradient(#174689, #FF82CE); */
 }
-
+/* 
 scrollbar-hide::-webkit-scrollbar {
   display: none;
 }
@@ -22,7 +33,7 @@ scrollbar-hide::-webkit-scrollbar {
 .scrollbar-hide {
   -ms-overflow-style: none;
   scrollbar-width: none;
-}
+} */
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
