--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,26 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 @layer utilities {
+
   /* Chrome, Safari and Opera */
   .no-scrollbar::-webkit-scrollbar {
     display: none;
-  }
 
+  }
+  
+  /* .striped div:nth-child(6n+1), .striped div:nth-child(6n+2),.striped div:nth-child(6n+3) {
+    @apply bg-[#0b0914]
+  } */
   .no-scrollbar {
-    -ms-overflow-style: none; /* IE and Edge */
-    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
   }
 }
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -25,6 +34,7 @@ body {
 
   /* background:  linear-gradient(#174689, #FF82CE); */
 }
+
 /* 
 scrollbar-hide::-webkit-scrollbar {
   display: none;
@@ -61,6 +71,7 @@ code {
   background-position: right center;
   text-decoration: none;
 }
+
 .btn-grad:disabled {
   background-color: #a7a7a7;
   background-image: none;
