--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@ body {
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
-  /* background-color: #323232; */
+  /* background-color: #03001C; */
   -moz-osx-font-smoothing: grayscale;
   background-color: #1c1733;
   /* background:linear-gradient(-45deg, #00dfed 0%, #001cb0 100%) */
